# duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
micro/classification/: analyze.py
micro/cost/: cost_calculation.py
micro/nodes/: node_count.py
micro/selectivity/: CMakeLists.txt  gen_dt_predicates.py  run_selectivity.cpp
micro/selectivity/common/: load_naive_merge_rule.sql
micro/selectivity/workloads/: gen_predicates.py  gen_workload_models.py
micro/selectivity/workloads/medical_charges/: predicates-all.txt  predicates.txt  query.sql  sql_rewrite.py
micro/selectivity/workloads/nyc-taxi-green-dec-2016/: predicates-all.txt  predicates.txt  sql_rewrite.py
queries/: load_convert_rule.sql
queries/Retree/: CMakeLists.txt  feature_frequency.py  run_retree.cpp
queries/Smart/: CMakeLists.txt  clf2reg.py  dt_predicate.py  gen_dt_predicates.py  run_smart.cpp  tree.py  utils.py
src/: CMakeLists.txt
test/extension/: CMakeLists.txt  retree_convert_rule_extension.cpp  retree_extension.cpp  retree_inference_function_extension.cpp  retree_merge_rule_extension.cpp  retree_naive_merge_rule_extension.cpp  retree_prune_extension.cpp  retree_prune_rule_extension.cpp
workloads/: batch_append.py  train.sh  tree.py  tree_charts.py  utils.py
workloads/bike_sharing_demand/: bike_sharing_demand_expand.py  train_bike_sharing_demand_dt.py  train_bike_sharing_demand_rf.py
workloads/expedia/: expedia_expand.py  train_expedia_rf.py
workloads/flights/: dpp.ipynb  flights_expand.py  train_flights_dt.py  train_flights_rf.py
workloads/hospital/: dpp.ipynb  (+3 more)
(+118 files in other folders)
